fix: Добавил конструктор копирования Field и Planet